k8s-manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-devops
  labels:
    name: demo-devops
    environment: production
